--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@
   --grey: #f2f2f2;
   --grey-shadow: #00000040;
   --white: #fff;
+  --border-grey: #d9d9d9;
 }
 
 body {
@@ -24,6 +25,7 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
 .d-flex {
   display: flex;
 }
@@ -83,15 +85,18 @@ a {
   margin: 0;
   font-size: 22px;
 }
+
 /****** Search Part ***********/
 .search-form {
   display: flex;
   align-items: center;
   margin: 30px 0;
 }
+
 .search-title {
   margin: 8px 0;
 }
+
 .search-subtitle {
   margin: 8px 0;
 }
@@ -138,6 +143,62 @@ a {
   color: var(--white);
 }
 
+/****** Filters Part ***********/
+.filters {
+  display: flex;
+  padding-bottom: 30px;
+}
+
+.filters-list {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  list-style: none;
+  gap: 10px;
+  padding: 0;
+  margin: 0;
+}
+
+.filters-item {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  border: 2px solid var(--border-grey);
+  border-radius: 25px;
+  padding: 12px 19px;
+}
+
+.filters-item .fa-solid {
+  color: var(--main-color);
+  font-size: 22px;
+}
+.filters-item:hover {
+  background-color: var(--filter-bg-color);
+  cursor: pointer;
+}
+
+/****** Info Part ***********/
+.info {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+
+.info-icon-ctn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid var(--border-grey);
+  border-radius: 50%;
+  width: 22px;
+  height: 22px;
+}
+
+.info-icon {
+  font-size: 10px;
+  color: var(--main-color);
+}
+
 /****** Cards Part ***********/
 .card {
   background-color: var(--white);
@@ -157,6 +218,7 @@ a {
 .euro {
   font-weight: 700;
 }
+
 .card .fa-star {
   color: var(--main-color);
 }
@@ -180,18 +242,62 @@ a {
 
 /****** Hebergements ***********/
 .hebergements {
-  width: 65%;
+  width: calc(65% - 60px);
+  background-color: var(--grey);
+  border-radius: 15px;
+  padding: 30px;
+}
+
+.hebergements-cards {
+  display: grid;
+  grid-template-columns: repeat(3, minmax(160px, 1fr));
+  gap: 30px;
+  margin-top: 30px;
+}
+
+.hebergements-cards a {
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  width: 100%;
+}
+
+.hebergements-cards .card img {
+  width: 100%;
+  height: 111px;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+}
+
+.hebergements-cards .card-title {
+  margin-top: 10px;
+  margin-bottom: 8px;
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.hebergements-cards .card-subtitle {
+  margin: 0 0 8px 0;
 }
 
 /****** Populaires ***********/
 .populaires {
-  width: 32%;
+  width: calc(32% - 60px);
+  background-color: var(--grey);
+  border-radius: 15px;
+  padding: 30px;
 }
 
 .populaires-title {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.populaires-title .fa-solid {
+  color: var(--main-color);
 }
 
 .populaires-cards .card {
@@ -227,22 +333,88 @@ a {
 .populaires-cards .card-rating {
   margin-bottom: 5px;
 }
+/****** Activities Part ***********/
+.activities {
+  margin: 30px 0;
+}
 
+.activities-title {
+  margin: 30px 0;
+}
+
+.activities-cards {
+  display: flex;
+  justify-content: space-between;
+  gap: 30px;
+}
+
+.activities-cards .card {
+  width: 25%;
+}
+
+.activities-cards .card img {
+  width: 100%;
+  height: 380px;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+}
+
+.activities-cards .card-content {
+  padding: 20px 19px;
+  font-size: 16px;
+  line-height: 18.78px;
+  font-weight: 700;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 100%;
+  background-color: var(--grey);
+}
+
+.footer-col {
+  padding: 20px;
+  width: 33%;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.footer-title {
+  font-size: 18px;
+  font-weight: 700;
+  margin: 0;
+}
+
+.footer-list {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
 /* Le code ci-dessous correspond à la version responsive uniquement */
 
 /****** Media queries ***********/
 /* Medium devices (tablets, less/equal than 1024px) */
+
 @media (width < 1024px) {
-	.hebergements-and-populaires {
+  .filters {
     flex-direction: column;
   }
 
+  .hebergements-and-populaires {
+    flex-direction: column;
+  }
+
+  .populaires,
   .hebergements {
-    width: 100%;
+    width: calc(100% - 60px);
   }
 
   .populaires {
-    width: 100%;
     margin-top: 50px;
   }
 
@@ -263,31 +435,43 @@ a {
   .populaires-cards .card-subtitle {
     font-size: 13px;
   }
+
+  .activities-cards .card img {
+    height: 200px;
+  }
 }
 
-
-@media (width < 768px) {
-	.global-container {
+@media (width <= 768px) {
+  .global-container {
     padding: 0;
   }
+
   .header {
     flex-direction: column;
   }
+
+  .search {
+    padding: 30px 20px;
+  }
+
   .header-img-ctn {
     align-items: center;
     width: 100%;
     padding: 30px 0;
     justify-content: center;
   }
+
   .header-img-ctn img {
     max-width: 100px;
   }
+
   .header-menu-list {
     gap: 0;
     margin: 0;
     width: 100%;
     padding: 0;
   }
+
   .header-menu-item {
     border-top: 0px solid transparent;
     border-bottom: 1px solid var(--grey);
@@ -296,25 +480,88 @@ a {
     width: 50%;
     text-align: center;
   }
+
   .header-menu-item.active,
   .header-menu-item:hover {
     list-style: none;
     border-top: Opx solid var(--main-color);
     border-bottom: 1px solid var(--main-color);
   }
+
   .search-form .search-btn .search-btn-icon {
     color: var(--white);
     display: inline-block;
   }
+
   .search-form .search-btn .search-btn-text {
     color: var(--white);
     display: none;
   }
+
   .search-form .search-btn {
     width: 49px;
     height: 49px;
     border-radius: 15px 16px;
     transform: translateX(-15px);
     box-shadow: 0px 4px 4px 0px var(--grey-shadow);
+  }
+
+  .filters-list {
+    justify-content: space-between;
+  }
+
+  .filters-item {
+    width: 40%;
+    padding: 12px 15px;
+  }
+
+  .hebergements-and-populaires {
+    flex-direction: column-reverse;
+  }
+
+  .hebergements-cards {
+    grid-template-columns: 1fr;
+    gap: 15px;
+    margin-top: 15px;
+  }
+
+  .hebergements {
+    border-radius: 0;
+    background-color: transparent;
+  }
+
+  .populaires {
+    border-radius: 0;
+    margin-top: 0;
+  }
+
+  .populaires-cards {
+    flex-direction: column;
+  }
+
+  .populaires-cards a {
+    width: 100%;
+  }
+
+  .activities {
+    padding: 0 30px;
+  }
+
+  .activities-cards {
+    flex-direction: column;
+    width: 100%;
+    justify-content: center;
+  }
+
+  .activities-cards .card {
+    width: 100%;
+  }
+
+  .activities-cards .card img {
+    height: 141px;
+  }
+  
+  .footer {
+    flex-direction: column;
   }
 }
