--- a/css/style.css
+++ b/css/style.css
@@ -182,6 +182,7 @@ a {
   display: flex;
   gap: 10px;
   align-items: center;
+  margin-bottom: 35px;
 }
 
 .info-icon-ctn {
@@ -246,6 +247,13 @@ a {
   background-color: var(--grey);
   border-radius: 15px;
   padding: 30px;
+}
+.hebergements .hebergements-seen-more {
+  padding-top: 30px;
+  font-size: 18px;
+  line-height: 22px;
+  font-weight: 700;
+  cursor: pointer;
 }
 
 .hebergements-cards {
@@ -405,6 +413,9 @@ a {
     flex-direction: column;
   }
 
+  .search-form .search-input {
+    width: calc(100% - (2*49px));    
+  }
   .hebergements-and-populaires {
     flex-direction: column;
   }
@@ -511,9 +522,16 @@ a {
   }
 
   .filters-item {
-    width: 40%;
+    width: calc(40% - (2*12px));
     padding: 12px 15px;
+    
   }
+  .filters-item span {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+
 
   .hebergements-and-populaires {
     flex-direction: column-reverse;
@@ -560,7 +578,7 @@ a {
   .activities-cards .card img {
     height: 141px;
   }
-  
+
   .footer {
     flex-direction: column;
   }
