--- a/css/style.css
+++ b/css/style.css
@@ -495,7 +495,7 @@ a {
   .header-menu-item.active,
   .header-menu-item:hover {
     list-style: none;
-    border-top: Opx solid var(--main-color);
+    border-top: 0 solid var(--main-color);
     border-bottom: 1px solid var(--main-color);
   }
 
